# HolyTrees

./: .gitignore  CHANGELOG.md  LICENSE  README.md  demo.py  pyproject.toml
src/holytrees/: __init__.py  _jld2.py  analysis.py  cells.py  errors.py  model.py  viz.py
tests/: test_holytrees.py
tests/data/: run_20260614_182728.jld2
